[gd_scene load_steps=21 format=3 uid="uid://4epmf0ri4qkw"]

[ext_resource type="Script" path="res://scenes/Chicken.gd" id="1_qlnyo"]
[ext_resource type="SpriteFrames" uid="uid://4tyurajns68g" path="res://assets/images/chicken-brown.tres" id="2_pxcx5"]
[ext_resource type="AudioStream" uid="uid://bmfp7m5uthwnt" path="res://assets/sounds/chicken/loud.ogg" id="3_qk85e"]
[ext_resource type="AudioStream" uid="uid://baxvjussbn4hh" path="res://assets/sounds/chicken/short.ogg" id="4_eo7ss"]
[ext_resource type="AudioStream" uid="uid://do6fwaiat7bbo" path="res://assets/sounds/chicken/shortshort2.ogg" id="5_s70xe"]
[ext_resource type="AudioStream" uid="uid://b22p5jrhm4vf" path="res://assets/sounds/chicken/shortshortlong.ogg" id="6_kad46"]
[ext_resource type="AudioStream" uid="uid://04ddkp1kixg2" path="res://assets/sounds/chicken/shortshortshort.ogg" id="7_ltatj"]
[ext_resource type="Texture2D" uid="uid://dem06ax2v06tk" path="res://assets/images/chicken.png" id="8_kxsej"]
[ext_resource type="AudioStream" uid="uid://cjwdauqo6rokk" path="res://assets/sounds/pop.ogg" id="9_m8exy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qsne2"]
radius = 2.0
height = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_t0fas"]
atlas = ExtResource("8_kxsej")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s25bk"]
atlas = ExtResource("8_kxsej")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrvwo"]
atlas = ExtResource("8_kxsej")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve2yj"]
atlas = ExtResource("8_kxsej")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys01u"]
atlas = ExtResource("8_kxsej")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqf16"]
atlas = ExtResource("8_kxsej")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1tsoa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0fas")
}],
"loop": true,
"name": &"egg1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s25bk")
}],
"loop": true,
"name": &"egg2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrvwo")
}],
"loop": true,
"name": &"egg3",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_ve2yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys01u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqf16")
}],
"loop": true,
"name": &"golden",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fs6yw"]
resource_name = "clear"

[sub_resource type="Animation" id="Animation_11h03"]
resource_name = "pop"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.277393),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.297302, 3.4822),
"update": 0,
"values": [Vector2(0, -15), Vector2(0, -21)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pyeeq"]
_data = {
"clear": SubResource("Animation_fs6yw"),
"pop": SubResource("Animation_11h03")
}

[node name="Chicken" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_qlnyo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qsne2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_pxcx5")
animation = &"jump"
offset = Vector2(0, -6)

[node name="EggPopSprite" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
z_index = 500
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_1tsoa")
animation = &"golden"
frame_progress = 0.799876

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D/EggPopSprite"]
libraries = {
"": SubResource("AnimationLibrary_pyeeq")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimatedSprite2D/EggPopSprite"]
position = Vector2(0, 15)
stream = ExtResource("9_m8exy")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LayingTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioTimer" type="Timer" parent="."]
one_shot = true

[node name="Audios" type="Node" parent="."]

[node name="AudioLoud" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("3_qk85e")
bus = &"chickens"

[node name="AudioS" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("4_eo7ss")
bus = &"chickens"

[node name="AudioSS" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("5_s70xe")
bus = &"chickens"

[node name="AudioSSS" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("7_ltatj")
bus = &"chickens"

[node name="AudioSSL" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("6_kad46")
bus = &"chickens"
